The changes made were for research purposes

--- a/Style.css
+++ b/Style.css
@@ -17,3 +17,15 @@
     display: flex;
     gap: 2.6rem;
 }
+
+
+
+
+
+
+
+@media only screen and (maxwidthe:767px){
+    .Texts{
+        background-color: black;
+    }
+} 
